<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TextView
        android:id="@+id/textAdviceTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/titleTextStyle"
        android:textAlignment="center"
        android:paddingVertical="16dp"
        android:text="@string/ask_advice" />

    <EditText
        android:id="@+id/editAdvice"
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:ems="10"
        android:gravity="start|top"
        android:padding="16dp"
        android:hint="@string/write_your_message_here"
        android:background="@drawable/search_edit_background"
        android:layout_marginHorizontal="16dp"
        android:inputType="textMultiLine" />

    <Button
        android:id="@+id/buttonSendAdvice"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:text="@string/send" />

</LinearLayout>