<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_booking">

    <fragment
        android:id="@+id/navigation_booking"
        android:name="com.redapps.tabib.ui.booking.BookingFragment"
        android:label="@string/title_booking"
        tools:layout="@layout/fragment_booking" >
        <action
            android:id="@+id/action_doctor_detail"
            app:destination="@id/nav_doctor_detail" />
    </fragment>

    <fragment
        android:id="@+id/navigation_treatment"
        android:name="com.redapps.tabib.ui.treatment.TreatmentFragment"
        android:label="@string/title_treatment"
        tools:layout="@layout/fragment_treatment" />

    <fragment
        android:id="@+id/navigation_appointment"
        android:name="com.redapps.tabib.ui.appointment.AppointmentFragment"
        android:label="@string/title_appointment"
        tools:layout="@layout/fragment_appointment" />
    <fragment
        android:id="@+id/nav_doctor_detail"
        android:name="com.redapps.tabib.ui.booking.DoctorDetailFragment"
        android:label="fragment_doctor_detail"
        tools:layout="@layout/fragment_doctor_detail" >
        <action
            android:id="@+id/action_nav_doctor_detail_to_navigation_booking"
            app:destination="@id/navigation_booking"
            app:enterAnim="@anim/fade_in"
            app:exitAnim="@anim/fade_out" />
        <argument
            android:name="doc"
            app:argType="string" />
    </fragment>
</navigation>